# Drone.Server.Fake

./: CMakeLists.txt  CMakePresets.json  vcpkg.json  video.sdp  video_ffplay.bat
app/: CMakeLists.txt
app/PiSubmarine/Drone/Server/Fake/: main.cpp
app/test-certs/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  client-openssl.cnf  server-cert.pem  server-key.pem  server-openssl.cnf
app/test-certs/pisubmarine-local/: Generate.ps1  ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  client-openssl.cnf  server-cert.pem  server-key.pem  server-openssl.cnf
docs/: Architecture.md
public/PiSubmarine/Drone/Server/Fake/: ErrorCode.h  Logging.h  Runtime.h
src/: CMakeLists.txt
src/PiSubmarine/Drone/Server/Fake/: BallastActuator.cpp  BallastActuator.h  BallastProvider.cpp  BallastProvider.h  BatteryProvider.cpp  BatteryProvider.h  BidirectionalMotor.cpp  BidirectionalMotor.h  DepthProvider.cpp  DepthProvider.h  ErrorCode.cpp  FakeBatteryProvider.cpp  FakeBatteryProvider.h  FakeGimbalController.cpp  FakeGimbalController.h  FakeHorizontalController.cpp  FakeHorizontalController.h  FakeLampController.cpp  FakeLampController.h  FakeMotorProvider.cpp  FakeMotorProvider.h  FakeVerticalController.cpp  FakeVerticalController.h  FakeVideoController.cpp  FakeVideoController.h  GimbalController.cpp  GimbalController.h  HorizontalController.cpp  HorizontalController.h  LampController.cpp  LampController.h  LoggerFactory.cpp  LoggerFactory.h  MotorProvider.cpp  MotorProvider.h  ProximityProvider.cpp  ProximityProvider.h  Runtime.cpp  ServoController.cpp  ServoController.h  (+8 more)
test/: CMakeLists.txt
test/PiSubmarine/Drone/Server/Fake/: BallastActuatorTest.cpp  BallastProviderTest.cpp  BatteryProviderTest.cpp  BidirectionalMotorTest.cpp  ErrorCodeTest.cpp  LampControllerTest.cpp  MotorProviderTest.cpp  RuntimeTest.cpp  ServoControllerTest.cpp  VerticalSimulationEngineTest.cpp
